--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@kyvg/vue3-notification": "^3.2.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
