--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
+    "teste": "file:",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
